refactor(website): replace the word option by input

--- a/documentation/docs/02-getting-started/02-workflow-testing.mdx
+++ b/documentation/docs/02-getting-started/02-workflow-testing.mdx
@@ -13,7 +13,7 @@ Before going further into the customization, you may want to try it first.
 
 :::tip
 
-Use the [dry-run](../dry-run-option) mode to avoid altering your repository yet.
+Use the [dry-run](../dry-run-input) mode to avoid altering your repository yet.
 
 :::
 
@@ -29,14 +29,14 @@ with:
 :::tip
 
 You can now check the logs, and especially the [statistics](../statistics) at the end.  
-You will have a better idea over what to expect when a real run without the [dry-run](../dry-run-option) mode occur.
+You will have a better idea over what to expect when a real run without the [dry-run](../dry-run-input) mode occur.
 
 :::
 
 ## Customize the behaviour {#customize-the-behaviour}
 
 If the action was successful, you may wish now to configure it at your convenience.  
-Follow the [next page](../all-options) to have access to all the options.
+Follow the [next page](../all-inputs) to have access to all the inputs.
 
 :::info
 
