--- a/documentation/docs/04-github-token-option.mdx
+++ b/documentation/docs/04-github-token-option.mdx
@@ -1,9 +1,9 @@
 ---
-id: github-token-option
-title: GitHub token option
+id: github-token-input
+title: GitHub token input
 tags:
   - Common
-  - Options
+  - Inputs
 ---
 
 ### Input {#input}
@@ -14,7 +14,7 @@ Default value: `${{ github.token }}`
 
 ### Description {#description}
 
-This option will let you define what GitHub token to use to perform the calls to the GitHub API.  
+This input will let you define what GitHub token to use to perform the calls to the GitHub API.  
 You can also read the [Automatic token authentication](https://docs.github.com/en/actions/security-guides/automatic-token-authentication) to have more information.
 
 ### Example {#example}
