--- a/documentation/docs/06-issues/03-ignore-all-labels-option.mdx
+++ b/documentation/docs/06-issues/03-ignore-all-labels-option.mdx
@@ -1,9 +1,9 @@
 ---
-id: issue-ignore-all-labels-option
-title: Ignore all issue labels option
+id: issue-ignore-all-labels-input
+title: Ignore all issue labels input
 tags:
   - Issues
-  - Options
+  - Inputs
 ---
 
 ### Input {#input}
@@ -14,15 +14,15 @@ Default value: `false`
 
 ### Description {#description}
 
-This option will let you ignore the processing of the issues which have at least one label.  
+This input will let you ignore the processing of the issues which have at least one label.  
 This can be useful when you use labels for triage.
 
-If you use some default labels in your [issues templates](https://docs.github.com/en/communities/using-templates-to-encourage-useful-issues-and-pull-requests/configuring-issue-templates-for-your-repository#creating-issue-forms), this option may not suit you.  
-You may prefer to use instead the [ignore any labels option](issue-ignore-any-labels-option) to list only some specific labels.
+If you use some default labels in your [issues templates](https://docs.github.com/en/communities/using-templates-to-encourage-useful-issues-and-pull-requests/configuring-issue-templates-for-your-repository#creating-issue-forms), this input may not suit you.  
+You may prefer to use instead the [ignore any labels input](issue-ignore-any-labels-input) to list only some specific labels.
 
 :::note
 
-If the issue is stale and so, has a [stale label](issue-stale-label-option), this option will not ignore the processing.
+If the issue is stale and so, has a [stale label](issue-stale-label-input), this input will not ignore the processing.
 
 :::
 
