--- a/documentation/docs/06-issues/04-ignore-any-labels-option.mdx
+++ b/documentation/docs/06-issues/04-ignore-any-labels-option.mdx
@@ -1,9 +1,9 @@
 ---
-id: issue-ignore-any-labels-option
-title: Ignore any issue labels option
+id: issue-ignore-any-labels-input
+title: Ignore any issue labels input
 tags:
   - Issues
-  - Options
+  - Inputs
 ---
 
 ### Input {#input}
@@ -14,7 +14,7 @@ Default value: `[]`
 
 ### Description {#description}
 
-This option will let you ignore the processing of the issues which have at least one of the label from this list.  
+This input will let you ignore the processing of the issues which have at least one of the label from this list.  
 This can be useful when you use labels for triage.
 
 ### Example {#example}
