--- a/documentation/docs/06-issues/06-ignore-any-assignees-option.mdx
+++ b/documentation/docs/06-issues/06-ignore-any-assignees-option.mdx
@@ -1,9 +1,9 @@
 ---
-id: issue-ignore-any-assignees-option
-title: Ignore any issue assignees option
+id: issue-ignore-any-assignees-input
+title: Ignore any issue assignees input
 tags:
   - Issues
-  - Options
+  - Inputs
 ---
 
 ### Input {#input}
@@ -14,7 +14,7 @@ Default value: `[]`
 
 ### Description {#description}
 
-This option will let you ignore the processing of the issues which have at least one of the assignee from this list.  
+This input will let you ignore the processing of the issues which have at least one of the assignee from this list.  
 This can be useful when you use assignees to assign the issues to some members of your repository which will for sure close or at least process the issues very soon.
 
 ### Example {#example}
