--- a/documentation/docs/06-issues/09-ignore-before-creation-date-option.mdx
+++ b/documentation/docs/06-issues/09-ignore-before-creation-date-option.mdx
@@ -1,9 +1,9 @@
 ---
-id: issue-ignore-before-creation-date-option
-title: Ignore issue before creation date option
+id: issue-ignore-before-creation-date-input
+title: Ignore issue before creation date input
 tags:
   - Issues
-  - Options
+  - Inputs
 ---
 
 ### Input {#input}
@@ -14,7 +14,7 @@ Default value: `''`
 
 ### Description {#description}
 
-This option will let you ignore the processing of the issues which were created before this date.  
+This input will let you ignore the processing of the issues which were created before this date.  
 This can be useful when you are configuring this action for the first time, and you wish to keep it safe!  
 Let the processing handle the newest issues first to see if your configuration seems good!
 
