--- a/documentation/docs/06-issues/10-days-before-stale-option.mdx
+++ b/documentation/docs/06-issues/10-days-before-stale-option.mdx
@@ -1,9 +1,9 @@
 ---
-id: issue-days-before-stale-option
-title: Days before issue stale option
+id: issue-days-before-stale-input
+title: Days before issue stale input
 tags:
   - Issues
-  - Options
+  - Inputs
 ---
 
 ### Input {#input}
@@ -14,13 +14,13 @@ Default value: `30`
 
 ### Description {#description}
 
-This option will let you define the number of days before processing the issues as stale.
+This input will let you define the number of days before processing the issues as stale.
 
 The number of days is calculated based on the last update that occurred on the issues.
 
 **For example:**
 
-Assuming that an issue is inactive since 10 days and this option is configured to stale after two weeks.  
+Assuming that an issue is inactive since 10 days and this input is configured to stale after two weeks.  
 Someone adds a comment on this issue.  
 The issue cannot be stale until at least 2 weeks once again.
 
