--- a/documentation/docs/06-issues/11-stale-comment-option.mdx
+++ b/documentation/docs/06-issues/11-stale-comment-option.mdx
@@ -1,9 +1,9 @@
 ---
-id: issue-stale-comment-option
-title: Stale issue comment option
+id: issue-stale-comment-input
+title: Stale issue comment input
 tags:
   - Issues
-  - Options
+  - Inputs
 ---
 
 ### Input {#input}
@@ -14,7 +14,7 @@ Default value: `''`
 
 ### Description {#description}
 
-This option will let you define the comment that will be added on the issues when they are stale during the processing.
+This input will let you define the comment that will be added on the issues when they are stale during the processing.
 This can be useful if you wish to improve the call to action so that watchers can be aware that their issues may be closed soon.
 
 ### Example {#example}
