--- a/documentation/docs/06-issues/13-close-comment-option.mdx
+++ b/documentation/docs/06-issues/13-close-comment-option.mdx
@@ -1,9 +1,9 @@
 ---
-id: issue-close-comment-option
-title: Close issue comment option
+id: issue-close-comment-input
+title: Close issue comment input
 tags:
   - Issues
-  - Options
+  - Inputs
 ---
 
 ### Input {#input}
@@ -14,7 +14,7 @@ Default value: `''`
 
 ### Description {#description}
 
-This option will let you define the comment that will be added on the issues when they are closed after being stale for too long during the processing.  
+This input will let you define the comment that will be added on the issues when they are closed after being stale for too long during the processing.  
 This can be useful if you wish to improve the communication and the process on how to handle an unwanted closed issue.
 
 ### Example {#example}
