--- a/documentation/docs/06-issues/14-add-labels-after-stale-option.mdx
+++ b/documentation/docs/06-issues/14-add-labels-after-stale-option.mdx
@@ -1,9 +1,9 @@
 ---
-id: issue-add-labels-after-stale-option
-title: Add issue labels after stale option
+id: issue-add-labels-after-stale-input
+title: Add issue labels after stale input
 tags:
   - Issues
-  - Options
+  - Inputs
 ---
 
 ### Input {#input}
@@ -14,7 +14,7 @@ Default value: `[]`
 
 ### Description {#description}
 
-This option will let you add extra labels when the processing stale the issues.  
+This input will let you add extra labels when the processing stale the issues.  
 This can be useful if you wish to easily add extra labels to improve your triage post-stale.
 
 :::caution
