--- a/documentation/docs/06-issues/15-add-labels-after-close-option.mdx
+++ b/documentation/docs/06-issues/15-add-labels-after-close-option.mdx
@@ -1,9 +1,9 @@
 ---
-id: issue-add-labels-after-close-option
-title: Add issue labels after close option
+id: issue-add-labels-after-close-input
+title: Add issue labels after close input
 tags:
   - Issues
-  - Options
+  - Inputs
 ---
 
 ### Input {#input}
@@ -14,7 +14,7 @@ Default value: `[]`
 
 ### Description {#description}
 
-This option will let you add extra labels when the processing close the issues.  
+This input will let you add extra labels when the processing close the issues.  
 This can be useful if you wish to easily add extra labels to improve your triage post-closing.
 
 :::caution
