--- a/documentation/docs/06-issues/16-processing-option.mdx
+++ b/documentation/docs/06-issues/16-processing-option.mdx
@@ -1,9 +1,9 @@
 ---
-id: issue-processing-option
-title: Issue processing option
+id: issue-processing-input
+title: Issue processing input
 tags:
   - Issues
-  - Options
+  - Inputs
 ---
 
 ### Input {#input}
@@ -14,7 +14,7 @@ Default value: `true`
 
 ### Description {#description}
 
-This option will let you enable or disable the processing of all the issues.  
+This input will let you enable or disable the processing of all the issues.  
 This can be useful only if you do not intend to use this action to process the issues to avoid calling the GitHub API and consuming your quotas for nothing.
 
 ### Example {#example}
