--- a/documentation/docs/07-pull-requests/04-ignore-any-labels-option.mdx
+++ b/documentation/docs/07-pull-requests/04-ignore-any-labels-option.mdx
@@ -1,9 +1,9 @@
 ---
-id: pull-request-ignore-any-labels-option
-title: Ignore any pull request labels option
+id: pull-request-ignore-any-labels-input
+title: Ignore any pull request labels input
 tags:
   - Pull requests
-  - Options
+  - Inputs
 ---
 
 ### Input {#input}
@@ -14,7 +14,7 @@ Default value: `[]`
 
 ### Description {#description}
 
-This option will let you ignore the processing of the pull requests which have at least one of the label from this list.  
+This input will let you ignore the processing of the pull requests which have at least one of the label from this list.  
 This can be useful when you use labels for triage.
 
 ### Example {#example}
