--- a/documentation/docs/07-pull-requests/05-ignore-all-assignees-option.mdx
+++ b/documentation/docs/07-pull-requests/05-ignore-all-assignees-option.mdx
@@ -1,9 +1,9 @@
 ---
-id: pull-request-ignore-all-assignees-option
-title: Ignore all pull request assignees option
+id: pull-request-ignore-all-assignees-input
+title: Ignore all pull request assignees input
 tags:
   - Pull requests
-  - Options
+  - Inputs
 ---
 
 ### Input {#input}
@@ -14,11 +14,11 @@ Default value: `false`
 
 ### Description {#description}
 
-This option will let you ignore the processing of the pull requests which have at least one assignee.  
+This input will let you ignore the processing of the pull requests which have at least one assignee.  
 This can be useful when you use assignees to assign the pull requests to the members of your repository which will for sure close or at least process the pull requests very soon.
 
-However, if you are not certain that every assignee will handle for sure the processing of the pull requests, this option may not suit you.  
-You may prefer to use instead the [ignore any assignees option](pull-request-ignore-any-assignees-option) to list only some specific assignees or not use this option at all.
+However, if you are not certain that every assignee will handle for sure the processing of the pull requests, this input may not suit you.  
+You may prefer to use instead the [ignore any assignees input](pull-request-ignore-any-assignees-input) to list only some specific assignees or not use this input at all.
 
 ### Example {#example}
 
