--- a/documentation/docs/07-pull-requests/10-ignore-draft-option.mdx
+++ b/documentation/docs/07-pull-requests/10-ignore-draft-option.mdx
@@ -1,9 +1,9 @@
 ---
-id: pull-request-ignore-draft-option
-title: Ignore pull request draft option
+id: pull-request-ignore-draft-input
+title: Ignore pull request draft input
 tags:
   - Pull requests
-  - Options
+  - Inputs
 ---
 
 ### Input {#input}
@@ -14,7 +14,7 @@ Default value: `false`
 
 ### Description {#description}
 
-This option will let you ignore the processing of the pull requests which are in draft.  
+This input will let you ignore the processing of the pull requests which are in draft.  
 This can be useful when you use the draft feature to consider some pull requests as work in progress.  
 In such case, you may not wish to stale them.
 
