--- a/documentation/docs/07-pull-requests/13-days-before-close-option.mdx
+++ b/documentation/docs/07-pull-requests/13-days-before-close-option.mdx
@@ -1,9 +1,9 @@
 ---
-id: pull-request-days-before-close-option
-title: Days before pull request close option
+id: pull-request-days-before-close-input
+title: Days before pull request close input
 tags:
   - Pull requests
-  - Options
+  - Inputs
 ---
 
 ### Input {#input}
@@ -14,13 +14,13 @@ Default value: `30`
 
 ### Description {#description}
 
-This option will let you define the number of days before processing the pull requests to close.
+This input will let you define the number of days before processing the pull requests to close.
 
 The number of days is calculated based on the stale date (the stale label creation date) from today.
 
 **For example:**
 
-Assuming that a pull request is stale since 9 days and this option is configured to close after 10 days.  
+Assuming that a pull request is stale since 9 days and this input is configured to close after 10 days.  
 The pull request will be closed tomorrow if no update occur until then.
 
 ### Example {#example}
