--- a/documentation/docs/07-pull-requests/14-close-comment-option.mdx
+++ b/documentation/docs/07-pull-requests/14-close-comment-option.mdx
@@ -1,9 +1,9 @@
 ---
-id: pull-request-close-comment-option
-title: Close pull request comment option
+id: pull-request-close-comment-input
+title: Close pull request comment input
 tags:
   - Pull requests
-  - Options
+  - Inputs
 ---
 
 ### Input {#input}
@@ -14,7 +14,7 @@ Default value: `''`
 
 ### Description {#description}
 
-This option will let you define the comment that will be added on the pull requests when they are closed after being stale for too long during the processing.  
+This input will let you define the comment that will be added on the pull requests when they are closed after being stale for too long during the processing.  
 This can be useful if you wish to improve the communication and the process on how to handle an unwanted closed pull request.
 
 ### Example {#example}
