--- a/documentation/docs/07-pull-requests/18-processing-option.mdx
+++ b/documentation/docs/07-pull-requests/18-processing-option.mdx
@@ -1,9 +1,9 @@
 ---
-id: pull-request-processing-option
-title: Pull request processing option
+id: pull-request-processing-input
+title: Pull request processing input
 tags:
   - Pull requests
-  - Options
+  - Inputs
 ---
 
 ### Input {#input}
@@ -14,7 +14,7 @@ Default value: `true`
 
 ### Description {#description}
 
-This option will let you enable or disable the processing of all the pull requests.  
+This input will let you enable or disable the processing of all the pull requests.  
 This can be useful only if you do not intend to use this action to process the pull requests to avoid calling the GitHub API and consuming your quotas for nothing.
 
 ### Example {#example}
