--- a/documentation/docs/07-pull-requests/19-to-draft-instead-of-stale-option.mdx
+++ b/documentation/docs/07-pull-requests/19-to-draft-instead-of-stale-option.mdx
@@ -1,9 +1,9 @@
 ---
-id: pull-request-to-draft-instead-of-stale-option
-title: Pull request to draft instead of stale option
+id: pull-request-to-draft-instead-of-stale-input
+title: Pull request to draft instead of stale input
 tags:
   - Pull requests
-  - Options
+  - Inputs
 ---
 
 ### Input {#input}
@@ -14,12 +14,12 @@ Default value: `false`
 
 ### Description {#description}
 
-This option will let you change how the processing handle the pull requests that should be normally stale to instead convert them to drafts.  
+This input will let you change how the processing handle the pull requests that should be normally stale to instead convert them to drafts.  
 This can be useful when you are sure that all your pull requests are useful and must be at some point merged.
 
 :::info
 
-When converting to draft, the options [stale comment](pull-request-stale-comment-option) and [add labels after stale](pull-request-add-labels-after-stale-option) will not be performed.
+When converting to draft, the inputs [stale comment](pull-request-stale-comment-input) and [add labels after stale](pull-request-add-labels-after-stale-input) will not be performed.
 
 :::
 
