--- a/documentation/docs/09-statistics.mdx
+++ b/documentation/docs/09-statistics.mdx
@@ -13,7 +13,7 @@ To have an oversight vision of your workflow, you can check out the logs.
 There is, at the end, a list of statistics listing the main events that occurred during the run.
 
 This feature can be very helpful when you are not sure how the workflow will behave based on your configuration.  
-In such case, enable the [dry-run mode](dry-run-option) to avoid altering your repository, execute the workflow, and then analyse the statistics.
+In such case, enable the [dry-run mode](dry-run-input) to avoid altering your repository, execute the workflow, and then analyse the statistics.
 
 ### Example {#example}
 
