--- a/documentation/i18n/fr/docusaurus-plugin-content-docs/03-all-options.mdx
+++ b/documentation/i18n/fr/docusaurus-plugin-content-docs/03-all-options.mdx
@@ -1,11 +1,11 @@
 ---
-id: toutes-options
-title: Toutes les options
+id: toutes-inputs
+title: Toutes les inputs
 tags:
   - Common
   - Issues
   - Pull requests
-  - Options
+  - Inputs
 ---
 
 WIP
