--- a/documentation/i18n/fr/docusaurus-plugin-content-docs/05-dry-run-option.mdx
+++ b/documentation/i18n/fr/docusaurus-plugin-content-docs/05-dry-run-option.mdx
@@ -1,9 +1,9 @@
 ---
-id: option-dry-run
-title: Option dry-run
+id: input-dry-run
+title: Input dry-run
 tags:
   - Common
-  - Options
+  - Inputs
 ---
 
 WIP
