--- a/documentation/i18n/fr/docusaurus-plugin-content-docs/07-pull-requests/01-all-options.mdx
+++ b/documentation/i18n/fr/docusaurus-plugin-content-docs/07-pull-requests/01-all-options.mdx
@@ -1,9 +1,9 @@
 ---
 id: toutes-issues-pull-requests
-title: Toutes les options de pull requests
+title: Toutes les inputs de pull requests
 tags:
   - Pull requests
-  - Options
+  - Inputs
 ---
 
 WIP
