--- a/documentation/docs/05-dry-run-option.mdx
+++ b/documentation/docs/05-dry-run-option.mdx
@@ -1,9 +1,9 @@
 ---
-id: dry-run-option
-title: Dry-run option
+id: dry-run-input
+title: Dry-run input
 tags:
   - Common
-  - Options
+  - Inputs
 ---
 
 ### Input {#input}
@@ -14,7 +14,7 @@ Default value: `false`
 
 ### Description {#description}
 
-This option will let you run the stale workflow without performing any kind of Data Manipulation Language.  
+This input will let you run the stale workflow without performing any kind of Data Manipulation Language.  
 Your issues and pull requests will be safe, no label nor comment will be added, nothing will be closed.
 
 This is a good way to experiment with your configuration so that you won't have any surprises.
@@ -28,7 +28,7 @@ Check also the [statistics](statistics) at the end of the logs to have an overha
 
 ### Fast configuration testing {#fast-configuration-testing}
 
-By using this option in association with a [manually triggered workflow](https://github.blog/changelog/2020-07-06-github-actions-manual-triggers-with-workflow_dispatch/), it's very convenient and fast to test your configuration.
+By using this input in association with a [manually triggered workflow](https://github.blog/changelog/2020-07-06-github-actions-manual-triggers-with-workflow_dispatch/), it's very convenient and fast to test your configuration.
 
 ```yml {2-3}
 name: Stale
