--- a/documentation/docs/06-issues/07-ignore-all-project-cards-option.mdx
+++ b/documentation/docs/06-issues/07-ignore-all-project-cards-option.mdx
@@ -1,9 +1,9 @@
 ---
-id: issue-ignore-all-project-cards-option
-title: Ignore all issue project cards option
+id: issue-ignore-all-project-cards-input
+title: Ignore all issue project cards input
 tags:
   - Issues
-  - Options
+  - Inputs
 ---
 
 ### Input {#input}
@@ -14,11 +14,11 @@ Default value: `false`
 
 ### Description {#description}
 
-This option will let you ignore the processing of the issues which have at least one project card.  
+This input will let you ignore the processing of the issues which have at least one project card.  
 This can be useful when you link your issues with your projects, and you know that you will for sure close or at least process the issues very soon.
 
-However, if you are not certain that linking the issues with any project will result in the handling for sure of the processing of the issues, this option may not suit you.  
-You may prefer to use instead the [ignore any project cards option](issue-ignore-any-project-cards-option) to list only some specific project cards or not use this option at all.
+However, if you are not certain that linking the issues with any project will result in the handling for sure of the processing of the issues, this input may not suit you.  
+You may prefer to use instead the [ignore any project cards input](issue-ignore-any-project-cards-input) to list only some specific project cards or not use this input at all.
 
 ### Example {#example}
 
