--- a/documentation/docs/06-issues/08-ignore-any-project-cards-option.mdx
+++ b/documentation/docs/06-issues/08-ignore-any-project-cards-option.mdx
@@ -1,9 +1,9 @@
 ---
-id: issue-ignore-any-project-cards-option
-title: Ignore any issue project cards option
+id: issue-ignore-any-project-cards-input
+title: Ignore any issue project cards input
 tags:
   - Issues
-  - Options
+  - Inputs
 ---
 
 ### Input {#input}
@@ -14,7 +14,7 @@ Default value: `[]`
 
 ### Description {#description}
 
-This option will let you ignore the processing of the issues which have at least one of the project card from this list.  
+This input will let you ignore the processing of the issues which have at least one of the project card from this list.  
 This can be useful when you link your issues with some projects, and you know that you will for sure close or at least process the issues very soon.
 
 ### Example {#example}
