--- a/documentation/docs/06-issues/12-days-before-close-option.mdx
+++ b/documentation/docs/06-issues/12-days-before-close-option.mdx
@@ -1,9 +1,9 @@
 ---
-id: issue-days-before-close-option
-title: Days before issue close option
+id: issue-days-before-close-input
+title: Days before issue close input
 tags:
   - Issues
-  - Options
+  - Inputs
 ---
 
 ### Input {#input}
@@ -14,13 +14,13 @@ Default value: `30`
 
 ### Description {#description}
 
-This option will let you define the number of days before processing the issues to close.
+This input will let you define the number of days before processing the issues to close.
 
 The number of days is calculated based on the stale date (the stale label creation date) from today.
 
 **For example:**
 
-Assuming that an issue is stale since 9 days and this option is configured to close after 10 days.  
+Assuming that an issue is stale since 9 days and this input is configured to close after 10 days.  
 The issue will be closed tomorrow if no update occur until then.
 
 ### Example {#example}
