--- a/documentation/docs/07-pull-requests/02-stale-label-option.mdx
+++ b/documentation/docs/07-pull-requests/02-stale-label-option.mdx
@@ -1,9 +1,9 @@
 ---
-id: pull-request-stale-label-option
-title: Stale pull request label option
+id: pull-request-stale-label-input
+title: Stale pull request label input
 tags:
   - Pull requests
-  - Options
+  - Inputs
 ---
 
 ### Input {#input}
@@ -14,13 +14,13 @@ Default value: `stale`
 
 ### Description {#description}
 
-This option will let you define the label (by name) that will be added to your pull requests when they are considered as stale.
+This input will let you define the label (by name) that will be added to your pull requests when they are considered as stale.
 
-If the label is added to a pull request (based on the [days before stale option](pull-request-days-before-stale-option)), the next time the pull request is processed, the workflow will process it as a candidate for un-stale.  
+If the label is added to a pull request (based on the [days before stale input](pull-request-days-before-stale-input)), the next time the pull request is processed, the workflow will process it as a candidate for un-stale.  
 If the pull request was updated after the addition of the label, the pull request will be un-stale, and the label will be removed.
 
 Once the un-stale processing is done, if the pull request is still stale, the workflow will then process it as a candidate for closing.  
-If the pull request is stale for too long (based on the [days before close option](pull-request-days-before-close-option)), the pull request will be closed.
+If the pull request is stale for too long (based on the [days before close input](pull-request-days-before-close-input)), the pull request will be closed.
 
 :::caution
 
@@ -31,7 +31,7 @@ If not, the GitHub API will throw an error.
 
 :::tip
 
-You may find useful to [convert your pull requests to draft](pull-request-to-draft-instead-of-stale-option) instead of stale.
+You may find useful to [convert your pull requests to draft](pull-request-to-draft-instead-of-stale-input) instead of stale.
 
 :::
 
