--- a/documentation/docs/07-pull-requests/03-ignore-all-labels-option.mdx
+++ b/documentation/docs/07-pull-requests/03-ignore-all-labels-option.mdx
@@ -1,9 +1,9 @@
 ---
-id: pull-request-ignore-all-labels-option
-title: Ignore all pull request labels option
+id: pull-request-ignore-all-labels-input
+title: Ignore all pull request labels input
 tags:
   - Pull requests
-  - Options
+  - Inputs
 ---
 
 ### Input {#input}
@@ -14,12 +14,12 @@ Default value: `false`
 
 ### Description {#description}
 
-This option will let you ignore the processing of the pull requests which have at least one label.  
+This input will let you ignore the processing of the pull requests which have at least one label.  
 This can be useful when you use labels for triage.
 
 :::note
 
-If the pull request is stale and so, has a [stale label](pull-request-stale-label-option), this option will not ignore the processing.
+If the pull request is stale and so, has a [stale label](pull-request-stale-label-input), this input will not ignore the processing.
 
 :::
 
