--- a/documentation/docs/07-pull-requests/06-ignore-any-assignees-option.mdx
+++ b/documentation/docs/07-pull-requests/06-ignore-any-assignees-option.mdx
@@ -1,9 +1,9 @@
 ---
-id: pull-request-ignore-any-assignees-option
-title: Ignore any pull request assignees option
+id: pull-request-ignore-any-assignees-input
+title: Ignore any pull request assignees input
 tags:
   - Pull requests
-  - Options
+  - Inputs
 ---
 
 ### Input {#input}
@@ -14,7 +14,7 @@ Default value: `[]`
 
 ### Description {#description}
 
-This option will let you ignore the processing of the pull requests which have at least one of the assignee from this list.  
+This input will let you ignore the processing of the pull requests which have at least one of the assignee from this list.  
 This can be useful when you use assignees to assign the pull requests to some members of your repository which will for sure close or at least process the pull requests very soon.
 
 ### Example {#example}
