--- a/documentation/docs/07-pull-requests/07-ignore-all-project-cards-option.mdx
+++ b/documentation/docs/07-pull-requests/07-ignore-all-project-cards-option.mdx
@@ -1,9 +1,9 @@
 ---
-id: pull-request-ignore-all-project-cards-option
-title: Ignore all pull request project cards option
+id: pull-request-ignore-all-project-cards-input
+title: Ignore all pull request project cards input
 tags:
   - Pull requests
-  - Options
+  - Inputs
 ---
 
 ### Input {#input}
@@ -14,11 +14,11 @@ Default value: `false`
 
 ### Description {#description}
 
-This option will let you ignore the processing of the pull requests which have at least one project card.  
+This input will let you ignore the processing of the pull requests which have at least one project card.  
 This can be useful when you link your pull requests with your projects, and you know that you will for sure close or at least process the pull requests very soon.
 
-However, if you are not certain that linking the pull requests with any project will result in the handling for sure of the processing of the pull requests, this option may not suit you.  
-You may prefer to use instead the [ignore any project cards option](pull-request-ignore-any-project-cards-option) to list only some specific project cards or not use this option at all.
+However, if you are not certain that linking the pull requests with any project will result in the handling for sure of the processing of the pull requests, this input may not suit you.  
+You may prefer to use instead the [ignore any project cards input](pull-request-ignore-any-project-cards-input) to list only some specific project cards or not use this input at all.
 
 ### Example {#example}
 
