--- a/documentation/docs/07-pull-requests/08-ignore-any-project-cards-option.mdx
+++ b/documentation/docs/07-pull-requests/08-ignore-any-project-cards-option.mdx
@@ -1,9 +1,9 @@
 ---
-id: pull-request-ignore-any-project-cards-option
-title: Ignore any pull request project cards option
+id: pull-request-ignore-any-project-cards-input
+title: Ignore any pull request project cards input
 tags:
   - Pull requests
-  - Options
+  - Inputs
 ---
 
 ### Input {#input}
@@ -14,7 +14,7 @@ Default value: `[]`
 
 ### Description {#description}
 
-This option will let you ignore the processing of the pull requests which have at least one of the project card from this list.  
+This input will let you ignore the processing of the pull requests which have at least one of the project card from this list.  
 This can be useful when you link your pull requests with some projects, and you know that you will for sure close or at least process the pull requests very soon.
 
 ### Example {#example}
