--- a/documentation/docs/07-pull-requests/09-ignore-before-creation-date-option.mdx
+++ b/documentation/docs/07-pull-requests/09-ignore-before-creation-date-option.mdx
@@ -1,9 +1,9 @@
 ---
-id: pull-request-ignore-before-creation-date-option
-title: Ignore pull request before creation date option
+id: pull-request-ignore-before-creation-date-input
+title: Ignore pull request before creation date input
 tags:
   - Pull requests
-  - Options
+  - Inputs
 ---
 
 ### Input {#input}
@@ -14,7 +14,7 @@ Default value: `''`
 
 ### Description {#description}
 
-This option will let you ignore the processing of the pull requests which were created before this date.  
+This input will let you ignore the processing of the pull requests which were created before this date.  
 This can be useful when you are configuring this action for the first time, and you wish to keep it safe!  
 Let the processing handle the newest pull requests first to see if your configuration seems good!
 
