--- a/documentation/docs/07-pull-requests/11-days-before-stale-option.mdx
+++ b/documentation/docs/07-pull-requests/11-days-before-stale-option.mdx
@@ -1,9 +1,9 @@
 ---
-id: pull-request-days-before-stale-option
-title: Days before pull request stale option
+id: pull-request-days-before-stale-input
+title: Days before pull request stale input
 tags:
   - Pull requests
-  - Options
+  - Inputs
 ---
 
 ### Input {#input}
@@ -14,13 +14,13 @@ Default value: `30`
 
 ### Description {#description}
 
-This option will let you define the number of days before processing the pull requests as stale.
+This input will let you define the number of days before processing the pull requests as stale.
 
 The number of days is calculated based on the last update that occurred on the pull requests.
 
 **For example:**
 
-Assuming that a pull request is inactive since 10 days and this option is configured to stale after two weeks.  
+Assuming that a pull request is inactive since 10 days and this input is configured to stale after two weeks.  
 Someone adds a comment on this pull request.  
 The pull request cannot be stale until at least 2 weeks once again.
 
