--- a/documentation/docs/07-pull-requests/12-stale-comment-option.mdx
+++ b/documentation/docs/07-pull-requests/12-stale-comment-option.mdx
@@ -1,9 +1,9 @@
 ---
-id: pull-request-stale-comment-option
-title: Stale pull request comment option
+id: pull-request-stale-comment-input
+title: Stale pull request comment input
 tags:
   - Pull requests
-  - Options
+  - Inputs
 ---
 
 ### Input {#input}
@@ -14,7 +14,7 @@ Default value: `''`
 
 ### Description {#description}
 
-This option will let you define the comment that will be added on the pull requests when they are stale during the processing.
+This input will let you define the comment that will be added on the pull requests when they are stale during the processing.
 This can be useful if you wish to improve the call to action so that watchers can be aware that their pull requests may be closed soon.
 
 ### Example {#example}
