--- a/documentation/docs/07-pull-requests/15-delete-branch-after-close-option.mdx
+++ b/documentation/docs/07-pull-requests/15-delete-branch-after-close-option.mdx
@@ -1,9 +1,9 @@
 ---
-id: pull-request-delete-branch-after-close-option
-title: Delete pull request branch after close option
+id: pull-request-delete-branch-after-close-input
+title: Delete pull request branch after close input
 tags:
   - Pull requests
-  - Options
+  - Inputs
 ---
 
 ### Input {#input}
@@ -14,7 +14,7 @@ Default value: `false`
 
 ### Description {#description}
 
-This option will let you delete the branch associated to your pull requests when the processing close them.  
+This input will let you delete the branch associated to your pull requests when the processing close them.  
 This can be useful when you didn't enable the auto-deletion of branches and want to avoid having stale branches after some time.
 
 ### Example {#example}
