--- a/documentation/docs/07-pull-requests/17-add-labels-after-close-option.mdx
+++ b/documentation/docs/07-pull-requests/17-add-labels-after-close-option.mdx
@@ -1,9 +1,9 @@
 ---
-id: pull-request-add-labels-after-close-option
-title: Add pull request labels after close option
+id: pull-request-add-labels-after-close-input
+title: Add pull request labels after close input
 tags:
   - Pull requests
-  - Options
+  - Inputs
 ---
 
 ### Input {#input}
@@ -14,7 +14,7 @@ Default value: `[]`
 
 ### Description {#description}
 
-This option will let you add extra labels when the processing close the pull requests.  
+This input will let you add extra labels when the processing close the pull requests.  
 This can be useful if you wish to easily add extra labels to improve your triage post-closing.
 
 :::caution
