--- a/documentation/i18n/fr/docusaurus-plugin-content-docs/04-github-token-option.mdx
+++ b/documentation/i18n/fr/docusaurus-plugin-content-docs/04-github-token-option.mdx
@@ -1,9 +1,9 @@
 ---
-id: option-github-token
-title: Option GitHub token
+id: input-github-token
+title: Input GitHub token
 tags:
   - Common
-  - Options
+  - Inputs
 ---
 
 WIP
