--- a/documentation/i18n/fr/docusaurus-plugin-content-docs/06-issues/01-all-options.mdx
+++ b/documentation/i18n/fr/docusaurus-plugin-content-docs/06-issues/01-all-options.mdx
@@ -1,9 +1,9 @@
 ---
-id: toutes-options-issues
-title: Toute les options pour les issues
+id: toutes-inputs-issues
+title: Toute les inputs pour les issues
 tags:
   - Issues
-  - Options
+  - Inputs
 ---
 
 WIP
