--- a/documentation/docs/06-issues/02-outputs/01-all-outputs.mdx
+++ b/documentation/docs/06-issues/02-outputs/01-all-outputs.mdx
@@ -8,17 +8,17 @@ tags:
 
 The list of all issues the outputs.
 
-| Output                                                                                       | Description                                                                 |
-| -------------------------------------------------------------------------------------------- | --------------------------------------------------------------------------- |
-| [processed-issues-count](issues/outputs/processed-issues-count-output)                       | The number of issues processed.                                             |
-| [ignored-issues-count](issues/outputs/ignored-issues-count-output)                           | The number of issues ignored.                                               |
-| [unaltered-issues-count](issues/outputs/unaltered-issues-count-output)                       | The number of issues unaltered (either not good to stale or already stale). |
-| [stale-issues-count](issues/outputs/stale-issues-count-output)                               | The number of issues stale.                                                 |
-| [already-stale-issues-count](issues/outputs/already-stale-issues-count-output)               | The number of issues processed which were already stale.                    |
-| [remove-stale-issues-count](issues/outputs/remove-stale-issues-count-output)                 | The number of issues from where the stale state was removed.                |
-| [close-issues-count](issues/outputs/close-issues-count-output)                               | The number of issues closed.                                                |
-| [added-issues-comments-count](issues/outputs/added-issues-comments-count-output)             | The number of added issues comments.                                        |
-| [added-issues-labels-count](issues/outputs/added-issues-labels-count-output)                 | The number of added issues labels.                                          |
-| [called-api-issues-count](issues/outputs/called-api-issues-count-output)                     | The number of GitHub API calls performed for the issues.                    |
-| [called-api-issues-queries-count](issues/outputs/called-api-issues-queries-count-output)     | The number of GitHub API queries calls performed for the issues.            |
-| [called-api-issues-mutations-count](issues/outputs/called-api-issues-mutations-count-output) | The number of GitHub API mutations calls performed for the issues.          |
+| Output                                                                                       | Description                                                                 | Type     |
+| -------------------------------------------------------------------------------------------- | --------------------------------------------------------------------------- | -------- |
+| [processed-issues-count](issues/outputs/processed-issues-count-output)                       | The number of issues processed.                                             | `number` |
+| [ignored-issues-count](issues/outputs/ignored-issues-count-output)                           | The number of issues ignored.                                               | `number` |
+| [unaltered-issues-count](issues/outputs/unaltered-issues-count-output)                       | The number of issues unaltered (either not good to stale or already stale). | `number` |
+| [stale-issues-count](issues/outputs/stale-issues-count-output)                               | The number of issues stale.                                                 | `number` |
+| [already-stale-issues-count](issues/outputs/already-stale-issues-count-output)               | The number of issues processed which were already stale.                    | `number` |
+| [remove-stale-issues-count](issues/outputs/remove-stale-issues-count-output)                 | The number of issues from where the stale state was removed.                | `number` |
+| [close-issues-count](issues/outputs/close-issues-count-output)                               | The number of issues closed.                                                | `number` |
+| [added-issues-comments-count](issues/outputs/added-issues-comments-count-output)             | The number of added issues comments.                                        | `number` |
+| [added-issues-labels-count](issues/outputs/added-issues-labels-count-output)                 | The number of added issues labels.                                          | `number` |
+| [called-api-issues-count](issues/outputs/called-api-issues-count-output)                     | The number of GitHub API calls performed for the issues.                    | `number` |
+| [called-api-issues-queries-count](issues/outputs/called-api-issues-queries-count-output)     | The number of GitHub API queries calls performed for the issues.            | `number` |
+| [called-api-issues-mutations-count](issues/outputs/called-api-issues-mutations-count-output) | The number of GitHub API mutations calls performed for the issues.          | `number` |
