feat(issues): add new input `issue-limit-api-queries-count`
Before processing each issue, the workflow will check if the input is enabled.
If this is the case, the processing may stop if the statistics for queries are higher than the limit.
Closes #254

--- a/documentation/docs/06-issues/01-inputs/01-all-inputs.mdx
+++ b/documentation/docs/06-issues/01-inputs/01-all-inputs.mdx
@@ -24,3 +24,4 @@ The list of all issues the inputs.
 | [issue-add-labels-after-stale](issue-add-labels-after-stale-input)           | A list of labels added when the processing stale the issue (multiline).                                                                         |         |
 | [issue-add-labels-after-close](issue-add-labels-after-close-input)           | A list of labels added when the processing close the issue (multiline).                                                                         |         |
 | [issue-processing](issue-processing-input)                                   | Allow to process the issues.                                                                                                                    | `true`  |
+| [issue-limit-api-queries-count](issue-limit-api-queries-count-input)         | Limit the quantity of API queries calls performed during the processing of issues (-1 for unlimited).                                           | `-1`    |
