--- a/documentation/docs/06-issues/01-inputs/17-limit-api-queries-count-input.mdx
+++ b/documentation/docs/06-issues/01-inputs/17-limit-api-queries-count-input.mdx
@@ -14,7 +14,7 @@ Default value: `-1`
 
 ### Description {#description}
 
-This input will let you define a limit count of API queries calls performed during the processing.  
+This input will let you define a limit count of issues API queries calls performed during the processing.  
 If the limit is reached, the ongoing processed issue will finish it's processing then all other issues will be ignored.  
 This can be useful when you want to play it safe with this action.  
 This can be also very useful if you have a lot of issues to process, and you want to limit the quotas of your associated [GitHub token](../../github-token-input).
