--- a/documentation/docs/08-pull-requests/01-inputs/01-all-inputs.mdx
+++ b/documentation/docs/08-pull-requests/01-inputs/01-all-inputs.mdx
@@ -27,3 +27,4 @@ The list of all the pull requests inputs.
 | [pull-request-add-labels-after-close](pull-request-add-labels-after-close-input)           | A list of labels added when the processing close the pull request (multiline).                                                                         |         |
 | [pull-request-processing](pull-request-processing-input)                                   | Allow to process the pull requests.                                                                                                                    | `true`  |
 | [pull-request-to-draft-instead-of-stale](pull-request-to-draft-instead-of-stale-input)     | Convert the pull request to a draft pull request instead of handling it as a stale candidate.                                                          | `false` |
+| [pull-request-limit-api-queries-count](pull-request-limit-api-queries-count-input)         | Limit the quantity of API queries calls performed during the processing of pull requests (-1 for unlimited).                                           | `-1`    |
