--- a/documentation/docs/03-all-inputs.mdx
+++ b/documentation/docs/03-all-inputs.mdx
@@ -29,6 +29,7 @@ The list of all the inputs.
 | [issue-add-labels-after-close](issues/inputs/issue-add-labels-after-close-input)                                | A list of labels added when the processing close the issue (multiline).                                                                                |                       |
 | [issue-processing](issues/inputs/issue-processing-input)                                                        | Allow to process the issues.                                                                                                                           | `true`                |
 | [issue-limit-api-queries-count](issues/inputs/issue-limit-api-queries-count-input)                              | Limit the quantity of API queries calls performed during the processing of issues (-1 for unlimited).                                                  | `-1`                  |
+| [issue-limit-api-mutations-count](issues/inputs/issue-limit-api-mutations-count-input)                          | Limit the quantity of API mutations calls performed during the processing of issues (-1 for unlimited).                                                | `-1`                  |
 | [pull-request-stale-label](pull-requests/inputs/pull-request-stale-label-input)                                 | The label that will be added to the pull request when it is stale.                                                                                     | `stale`               |
 | [pull-request-ignore-all-labels](pull-requests/inputs/pull-request-ignore-all-labels-input)                     | Allow to ignore the processing of pull requests that contains any labels.                                                                              | `false`               |
 | [pull-request-ignore-any-labels](pull-requests/inputs/pull-request-ignore-any-labels-input)                     | Allow to ignore the processing of pull requests that contains one of those labels (multiline).                                                         |                       |
