feat(prs): add new input `pull-request-limit-api-mutations-count`
Before processing each pull request, the workflow will check if the input is enabled.
If this is the case, the processing may stop if the statistics for mutations are higher than the limit.
Closes #389

--- a/documentation/docs/02-getting-started/02-workflow-testing.mdx
+++ b/documentation/docs/02-getting-started/02-workflow-testing.mdx
@@ -33,7 +33,7 @@ You will have a better idea over what to expect when a real run without the [dry
 
 ### Test it with a limited amount of API calls {#test-it-with-a-limited-amount-of-api-calls}
 
-If you still wish to play it safe, you can configure a limit of API queries calls for your [issues](../issues/inputs/issue-limit-api-queries-count-input) and [pull requests](../pull-requests/inputs/pull-request-limit-api-queries-count-input), and a limit of API mutations calls for your [issues](../issues/inputs/issue-limit-api-mutations-count-input) to alter your repository on a reduced scope.
+If you still wish to play it safe, you can configure a limit of API queries calls for your [issues](../issues/inputs/issue-limit-api-queries-count-input) and [pull requests](../pull-requests/inputs/pull-request-limit-api-queries-count-input), and a limit of API mutations calls for your [issues](../issues/inputs/issue-limit-api-mutations-count-input) and [pull requests](../pull-requests/inputs/pull-request-limit-api-mutations-count-input) to alter your repository on a reduced scope.
 
 ```yml {5-7} title=".github/workflows/stale.yml"
 # ...
