--- a/documentation/docs/10-statistics.mdx
+++ b/documentation/docs/10-statistics.mdx
@@ -19,7 +19,7 @@ In such case, enable the [dry-run mode](dry-run-input) to avoid altering your re
 
 ### Limited API calls {#limited-api-calls}
 
-You can also simply limit the number of API queries calls for your [issues](issues/inputs/issue-limit-api-queries-count-input) and [pull requests](pull-requests/inputs/pull-request-limit-api-queries-count-input), and a limit of API mutations calls for your [issues](issues/inputs/issue-limit-api-mutations-count-input) to alter your repository on a reduced scope.
+You can also simply limit the number of API queries calls for your [issues](issues/inputs/issue-limit-api-queries-count-input) and [pull requests](pull-requests/inputs/pull-request-limit-api-queries-count-input), and a limit of API mutations calls for your [issues](issues/inputs/issue-limit-api-mutations-count-input) and [pull requests](pull-requests/inputs/pull-request-limit-api-mutations-count-input) to alter your repository on a reduced scope.
 
 ### Example {#example}
 
