docs(fix): fix wrong configuration examples

--- a/documentation/docs/06-issues/01-inputs/17-limit-api-queries-count-input.mdx
+++ b/documentation/docs/06-issues/01-inputs/17-limit-api-queries-count-input.mdx
@@ -27,5 +27,5 @@ name: Stale
 id: stale
 uses: sonia-corporation/stale@latest
 with:
-  issue-limit-api-queries-count: false
+  issue-limit-api-queries-count: 100
 ```
