--- a/documentation/docs/06-issues/01-inputs/18-limit-api-mutations-count-input.mdx
+++ b/documentation/docs/06-issues/01-inputs/18-limit-api-mutations-count-input.mdx
@@ -27,5 +27,5 @@ name: Stale
 id: stale
 uses: sonia-corporation/stale@latest
 with:
-  issue-limit-api-mutations-count: false
+  issue-limit-api-mutations-count: 100
 ```
