--- a/documentation/docs/08-pull-requests/01-inputs/20-limit-api-queries-count-input.mdx
+++ b/documentation/docs/08-pull-requests/01-inputs/20-limit-api-queries-count-input.mdx
@@ -27,5 +27,5 @@ name: Stale
 id: stale
 uses: sonia-corporation/stale@latest
 with:
-  pull-request-limit-api-queries-count: false
+  pull-request-limit-api-queries-count: 100
 ```
